@@ -1,3 +1,7 @@
+Mon Jul  7 00:35:10 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* bignum.c (big2str_power_cache): moved to VM specific data.
+
 Mon Jul  7 00:17:21 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* io.c (struct argf): use defin and defout instead of rb_stdin and
